--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@supabase/supabase-js": "^2.45.4",
     "bcryptjs": "^2.4.3",
-    "better-sqlite3": "^11.5.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "firebase": "^12.4.0",
     "jose": "^5.5.1",
     "morgan": "^1.10.0",
     "uuid": "^9.0.1",
@@ -23,7 +24,6 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
-    "@types/better-sqlite3": "^7.6.11",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.8",
     "@types/morgan": "^1.9.9",
